# prisl-code

./: .gitignore  .ruff.toml  README.md  pyproject.toml  setup.py
.github/: main.yml
.github/workflows/: main.yml
prisl_code/: __init__.PY  _venv_bootstrap.py  prislcode.py
